--- a/views/pages/index.ejs
+++ b/views/pages/index.ejs
@@ -56,7 +56,7 @@
           <label for="count">Number of Questions (Optional)</label>
           <input type="number" class="form-control" id="count" placeholder="10"/>
         </div>
-        <button type="submit" class="btn btn-primary" id="submit">Submit</button>
+        <button type="submit" class="btn btn-primary" id="submit">Generate API URL</button>
       </form>
 
       <div id="generated-api"></div>
